Fix wrong alignment of switch and its label in Settings dialog

--- a/src/features/settings/_settings.scss
+++ b/src/features/settings/_settings.scss
@@ -1,6 +1,6 @@
 .settings-dialog {
     min-width: 10%;
-    max-width: 90%;
+    max-width: calc(min(410px, 90%));
 }
 
 .settings-body {
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 5px;
+    max-width: 400px;
 }
 
 .settings-item {
